<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">TP1</string>
    <string name="Precedent">Précédent</string>
    <string name="Prenom">Prénom </string>
    <string name="Nom">Nom</string>
    <string name="Numero">Numéro</string>
    <string name="Homme">Homme</string>
    <string name="Femme">Femme</string>
    <string name="Ajouter">Ajouter</string>
    <string name="Supprimer">Supprimer</string>
    <string name="Modifier">Modifier</string>
    <string name="Bienvenue">Bienvenue</string>
    <string name="AddContact">Ajouter un contact</string>
    <string name="ListContact">Liste des contacts</string>
    <string name="Position">Position</string>

    <string name="color">Couleur</string>
    <string name="font">Police</string>
    <string name="change_color">Changer de couleur</string>
    <string name="change_font">Changer de police</string>

    <string name="red">Rouge</string>
    <string name="blue">Bleu</string>
    <string name="indigo">Indigo</string>
    <string name="green">Vert</string>
    <string name="yellow">Jaune</string>
    <string name="choose_color">Choisissez une couleur</string>
</resources>
